[package]
name = "relock"
version = "0.1.1"
authors = ["Nicolas del Valle <nicolas.delvalle@gmail.com>"]
edition = "2018"
description = "Distributed async locking using Redis"
license = "MIT"

[dependencies]
redis = { version = "0.21.0", features = ["tokio-comp"] }
thiserror = "1.0.26"
rand = "0.8.4"
tokio = { version = "1.9.0", features = ["time"] }

[dev-dependencies]
chrono = "0.4.19"
futures = "0.3.16"
tokio = { version = "1.9.0", features = ["rt", "macros", "fs", "rt-multi-thread"] }
